--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "i0bgaefehn1e4bg2",
+    "password": "tykirzpii5vbq5r5",
+    "database": "humlkw73vgx9q84j",
+    "host": "etdq12exrvdjisg6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   }
