--- a/migrations/config.json
+++ b/migrations/config.json
@@ -18,7 +18,7 @@
   "production": {
     "username": "i0bgaefehn1e4bg2",
     "password": "tykirzpii5vbq5r5",
-    "database": "tykirzpii5vbq5r5",
+    "database": "humlkw73vgx9q84j",
     "host": "etdq12exrvdjisg6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
