--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
   },
   "production": {
     "username": "i0bgaefehn1e4bg2",
-    "password": "uzkqdv2vnymlk3ad",
+    "password": "c31ysy0rx1ujxmjq",
     "database": "humlkw73vgx9q84j",
     "host": "etdq12exrvdjisg6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
